<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblEmailDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/email_destination"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/txtEmailDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblEmailDestination"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmailDestination">

        <Button
            android:id="@+id/btnDialogCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/btncancel"/>

        <Button
            android:id="@+id/btnDialogContinue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/btncontinue"/>
    </LinearLayout>

</RelativeLayout>