<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/clearLogLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0.50"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/lblClearCallForHowLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_confirmation"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clearLogLayout"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnDialogCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/btncancel" />

        <Button
            android:id="@+id/btnDialogContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/btncontinue" />

    </LinearLayout>

</RelativeLayout>